--- a/cord/template_projector_config.json
+++ b/cord/template_projector_config.json
@@ -1,13 +1,193 @@
 {
   "embeddings": [
     {
-      "tensorName": "CORD Dataset",
+      "tensorName": "CORD Dataset - 2020",
       "tensorShape": [
         1000,
         50
       ],
-      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_vecs.tsv",
-      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_meta.tsv"
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2020_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2020_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2019",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2019_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2019_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2018",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2018_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2018_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2017",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2017_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2017_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2016",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2016_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2016_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2015",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2015_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2015_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2014",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2014_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2014_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2013",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2013_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2013_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2012",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2012_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2012_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2011",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2011_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2011_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2010",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2010_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2010_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2009",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2009_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2009_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2008",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2008_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2008_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2007",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2007_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2007_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2006",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2006_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2006_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2006",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2006_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2006_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2005",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2005_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2005_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2004",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2004_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2004_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2003",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2003_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2003_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2002",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2002_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2002_meta.tsv"
+    },
+    {
+      "tensorName": "CORD Dataset - 2001",
+      "tensorShape": [
+        1000,
+        50
+      ],
+      "tensorPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2001_vecs.tsv",
+      "metadataPath": "https://raw.githubusercontent.com/Menasha/visualisation/main/cord_2001_meta.tsv"
     }
   ]
 }
